added ChangeMail to contracts

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Made by: Mbwana Musenzi
                     <a href="html/about.html">About</a>
                 </li>
                 <li class="nav_item" id="artists">
-                    <a href="html/artists.html">Artitsts</a>
+                    <a href="html/artists.html">Artists</a>
                 </li>
                 <li class="nav_item" id="projects">
                     <a href="html/projects.html">Projects</a>
@@ -68,6 +68,7 @@ Made by: Mbwana Musenzi
             <p><i>To register yourself as an artist all you have to do is launch a smartcontract of your own and add your art by name!</i></p>
             <p>Sounds complicated? Don't worry I will put out a step by step guide and you'll see how easily you can get started and earn revenue for your works! </p>
         </span>
+        <p><i>Join the Ghentian blockchain art revolution</i></p>
         <a href="html/register.html">Register Now!</a>   
     </div>
     <div id="footer" class="block">
